# DiscoveringModernCppSolutions

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
ch1/: CMakeLists.txt  README.md
ch1/1.10.1/: CMakeLists.txt  age.cpp
ch1/1.10.2/: CMakeLists.txt  arraysandpointers1.cpp  arraysandpointers2.cpp
ch1/1.10.3/: CMakeLists.txt  matrixmarket.cpp
ch2/: CMakeLists.txt  README.md
ch2/2.8.1/: CMakeLists.txt  polynomial.cpp
ch2/2.8.2/: CMakeLists.txt  moveassignment.cpp
ch2/2.8.3/: CMakeLists.txt  initializerlist.cpp
ch3/: CMakeLists.txt  README.md
ch3/3.11.1/: CMakeLists.txt  stringreprentation.cpp
ch3/3.11.10/: CMakeLists.txt  trapezoidrule.cpp
ch3/3.11.11/: CMakeLists.txt  functor.cpp
ch3/3.11.12/: CMakeLists.txt  lambda.cpp
ch3/3.11.13/: CMakeLists.txt  make_unique.cpp
ch3/3.11.3/: CMakeLists.txt  genericstack.cpp
ch3/3.11.4/: CMakeLists.txt  iteratorofavector.cpp
ch3/3.11.5/: CMakeLists.txt  main.cpp  odditerator.cpp  odditerator.h
ch3/3.11.6/: CMakeLists.txt  oddrange.cpp
ch3/3.11.8/: CMakeLists.txt  stackwithcustomsize.cpp
ch3/3.11.9/: CMakeLists.txt  deducingnontypetemplatearg.cpp
ch4/: CMakeLists.txt  README.md
ch4/4.8.1/: CMakeLists.txt  sortingbymagnitude.cpp
ch4/4.8.2/: CMakeLists.txt  stlcontainer.cpp
ch4/4.8.3/: CMakeLists.txt  fatou_dust.cpp  julia_set.cpp  mandelbrot.cpp
ch5/: CMakeLists.txt  README.md
ch5/5.5.1/: CMakeLists.txt  typetraits.cpp
ch5/5.5.2/: CMakeLists.txt  fibonacciSequence.cpp
ch5/5.5.3/: CMakeLists.txt  gcd.cpp
ch6/: README.md
